--- a/app/src/main/assets/dom.html
+++ b/app/src/main/assets/dom.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link rel="stylesheet" type="text/css" href="h1"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title></title>
     <script type="text/javascript">
 			function changeText () {
@@ -27,6 +27,12 @@
 
 			smartisan.hellowWorld('Smartisan OS');
 			}
+
+			function addP () {
+
+			smartisan.showToast('YiBao');
+			}
+
 			function sum ( name, age) {
 				return (name+age)
 			}
@@ -58,18 +64,20 @@
     </script>
 </head>
 <body>
-<div id="AA" style="width:150px ; height: 100px; background-color: aqua;">
+<div id="AA" style="width:100% ; height: 100px; background-color: aqua;">
     <p id="p_text" align="center"> 标题AA</p>
 
 </div>
 <br><br>
-<div id="BB" style="width:150px ; height: 100px; background-color: red;">
+<div id="BB" style="width:100% ; height: 100px; background-color: red;">
     <p id="p_text2" align="center"> 标题BB</p>
 </div>
 <br><br>
 
 <input type="button" name="改文字" value="改文字" id="change_text" onclick="changeText()"/>
 <input type="button" name="改样式" value="改样式" id="change_style" onclick="changeStyle()"/><br>
-<input type="button" value="删除" id="delete_p" onclick="jsToAndroid()" style="margin: 8px;"/>
+<input type="button" value="删除" id="delete_p" onclick="jsToAndroid()" style="margin: 8px;" width="100%"/><br>
+<input type="button" value="弹出" id="add_p" onclick="addP()" style="margin: 8px;" width="100%"/><br>
+
 </body>
 </html>
