--- a/app/src/main/assets/dom.html
+++ b/app/src/main/assets/dom.html
@@ -10,7 +10,7 @@
 			function changeText () {
 			var pA=	document.getElementById("p_text");
 			pA.innerHTML="Google";
-			pA.style.fontSize="xx-large"
+			pA.style.fontSize="xxx-large"
 			pA.style.color="deeppink"
 			}
 			
@@ -82,7 +82,7 @@
 
 <input type="button" name="改文字" value="改文字" id="change_text" onclick="changeText()"/>
 <input type="button" name="改样式" value="改样式" id="change_style" onclick="changeStyle()"/><br>
-<input type="button" value="删除" id="delete_p" onclick="jsToAndroid()" style="margin: 8px;"
+<input type="button" value="删除" id="delete_p" onclick="promptP()" style="margin: 8px;"
        width="100%"/><br>
 <input type="button" value="弹出" id="add_p" onclick="addP()" style="margin: 8px;" width="100%"/><br>
 
